--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -16,5 +16,24 @@
     "no_data": "No data available",
     "succss_message": "added successfuly",
     "delete_message": "deleted successfuly",
-    "update_message": "updated successfuly"
+    "update_message": "updated successfuly",
+    "notifications": "Notifications",
+    "dark_theme_toggle": "Dark Theme Toggle",
+    "profile": "Profile",
+    "profile_setting": "Profile Setting",
+    "account": "Account",
+    "account_setting": "Account Setting",
+    "copyright": "Copyright © ",
+    "developer_name": "Jai Sharma",
+    "help": "Help",
+    "welcome": "Welcome",
+    "go_back": "Go Back",
+    "go_home": "Go Home",
+    "error": "Error",
+    "errors": "Errors",
+    "hello": "Hello",
+    "logout": "Logout",
+    "lock": "Lock",
+    "register": "Register",
+    "login_failed": "These credentials do not match our records."
 }
