--- a/public/locales/hi/translation.json
+++ b/public/locales/hi/translation.json
@@ -16,5 +16,23 @@
     "no_data": "कोई डेटा उपलब्ध नहीं हैe",
     "succss_message": "सफलतापूर्वक जोड़ा गया",
     "delete_message": "सफलतापूर्वक हटाए गए",
-    "update_message": "सफलतापूर्वक अपडेटेड किये गए"
+    "update_message": "सफलतापूर्वक अपडेटेड किये गए",
+    "notifications": "सूचनाएं",
+    "dark_theme_toggle": "डार्क थीम टॉगल",
+    "profile": "प्रोफ़ाइल",
+    "profile_setting": "प्रोफ़ाइल सेटिंग",
+    "account": "खाता",
+    "account_setting": "खाते की सेटिंग",
+    "copyright": "कॉपीराइट © ",
+    "developer_name": "जय शर्मा ",
+    "welcome": "स्वागत है",
+    "go_back": "वापस जाओ",
+    "go_home": "घर जाओ",
+    "error": "त्रुटि",
+    "errors": "त्रुटिया",
+    "hello": "नमस्ते",
+    "logout": "लॉग आउट",
+    "lock": "ताला",
+    "register": "रजिस्टर करें",
+    "login_failed": "ये साख हमारे रिकॉर्ड से मेल नहीं खाते हैं।"
 }
